add cookie auth adjusted mapping of page URL params
